# quickchat

./: .gitignore
document/: chat-sequence-diagram.txt  chat.txt  database.mwb  link.txt  transfer-money-diagram.txt
quickchat-channels/: CMakeLists.txt  compile_commands.json  config.json
quickchat-channels/cmake/: FinduWebSockets.cmake
quickchat-channels/include/: channel.h  channel_service_impl.hpp  config.hpp  config_json.hpp  gen_id_service.h  logger.hpp  member.h  repository.hpp  repository_impl.hpp  snowflake.hpp
quickchat-channels/include/proto/: channel.pb.h  channel.proto  channel_service.grpc.pb.h  channel_service.pb.h  channel_service.proto
quickchat-channels/src/: channel.pb.cc  channel_service.grpc.pb.cc  logger.cpp  main.cpp  repository_impl.cpp
quickchat-conn/: CMakeLists.txt  compile_commands.json  config.json  nganluong
quickchat-conn/build2/: config.json
quickchat-conn/cmake/: FinduSockets.cmake
quickchat-conn/include/: authen_service.hpp  authen_service_impl.hpp  channel_service.hpp  channel_service_impl.hpp  common.hpp  config.hpp  config_json.hpp  friend_service.hpp  friend_service_impl.hpp  message_producer.hpp  message_producer_kafka.hpp  message_subscriber.hpp  message_subscriber_redis.hpp  payload.proto  session_mgr.hpp  session_mgr_impl.hpp  session_service.hpp  session_service_impl.hpp  singleton.hpp  user_info.hpp  util.h  websocket.hpp  websocket_impl.hpp
quickchat-conn/include/proto/: ..js  channel_service.grpc.pb.h  channel_service.pb.h  channel_service.proto  chat_content.proto  history.pb.h  payload.pb.h  payload.proto  payload_pb.js  service.grpc.pb.h  service.pb.h
quickchat-conn/include/proto/js/: history.proto  internal_message.proto  internal_message_pb.js  payload.proto  payload_pb.js
quickchat-conn/src/: body_parser.cpp  channel_service.grpc.pb.cc  channel_service.pb.cc  chat_content.pb.cc  history.pb.cc  main.cpp  message.pb.cc  payload.pb.cc  service.grpc.pb.cc  service.pb.cc  stub.cpp  user_info.cpp  util.cpp
quickchat-conn/tests/: test.cpp  test_app.cpp  test_session_mgr.cpp
quickchat-friends/: CMakeLists.txt  compile_commands.json  config.json
quickchat-friends/include/: friend.hpp  friend_service_impl.hpp  friends_request.hpp  repository.hpp  repository_impl.hpp
quickchat-friends/include/proto/: friend_service.pb.h  friend_service.proto  user.pb.h  user.proto
quickchat-friends/src/: friend_service.grpc.pb.cc  friend_service.pb.cc  main.cpp  user.pb.cc
quickchat-messages/: CMakeLists.txt  compile_commands.json  config.json
quickchat-messages/include/: common.h  gen_id_service_impl.h  internal_message.pb.h  message.h  message_consumer.hpp  message_consumer_impl.hpp  message_controller.hpp  message_controller_impl.hpp  message_dao.hpp  message_dao_impl.hpp  message_info.h  message_publisher.hpp  message_publisher_impl.hpp  message_repository.hpp  message_repository_impl.hpp  message_service_impl.hpp  seen.h
quickchat-messages/include/proto/: internal_message.pb.h  message.proto  message_service.grpc.pb.h  message_service.pb.h  message_service.proto
quickchat-messages/src/: internal_message.pb.cc  main.cpp  message.cpp  message_dao_impl.cpp  message_info.cpp  message_service.grpc.pb.cc  message_service.pb.cc
quickchat-middleware/: CMakeLists.txt  compile_commands.json  config.json  quickchat-middleware.cppcheck
quickchat-middleware/build2/: config.json
quickchat-middleware/include/: authen_service_impl.hpp  body_parser.hpp  channel_service.hpp  channel_service_impl.hpp  config_json.hpp  controller.hpp  friend_service.hpp  friend_service_impl.hpp  group_service_impl.hpp  logger.hpp  message_producer_kafka.hpp  message_service.hpp  message_service_impl.hpp  money_service.hpp  money_service_impl.hpp  session_service_impl.hpp  user_info.hpp  user_service.hpp  user_service_impl.hpp  util.h
quickchat-middleware/include/proto/: account.pb.h  channel.proto  chat_content.pb.h  friend.pb.h  friend.proto  friend_service.grpc.pb.h  history.pb.h  history.proto  internal_message.pb.h  message.pb.h  message.proto  message_service.grpc.pb.h  message_service.pb.h  payload.pb.h  payload.proto
quickchat-middleware/quickchat-middleware-cppcheck-build-dir/: body_parser.a1  channel.pb.a1  channel_service.grpc.pb.a1  channel_service.pb.a1  chat_content.pb.a1  files.txt  lastResults.xml  main.a1  message.pb.a1  message_service.grpc.pb.a1  message_service.pb.a1  payload.pb.a1  statistics.txt  user.pb.a1  user_info.a1  user_service.grpc.pb.a1  user_service.pb.a1  util.a1
quickchat-middleware/src/: body_parser.cpp  channel_service.pb.cc  friend.pb.cc  friend_service.pb.cc  history.pb.cc  internal_message.pb.cc  main.cpp  message.pb.cc  message_service.grpc.pb.cc  message_service.pb.cc  payload.pb.cc  user_service.grpc.pb.cc  user_service.pb.cc  util.cpp
quickchat-moneys/: CMakeLists.txt  compile_commands.json  config.json
quickchat-moneys/cmake/: CMakeCache.txt  FinduWebSockets.cmake  Makefile  cmake_install.cmake  quickchat-messages
quickchat-moneys/include/: account.h  config_json.hpp  gen_id_service.h  logger.hpp  money_service_impl.hpp  repository.hpp  repository_impl.hpp  request.h  transaction_history.h  util.h
quickchat-moneys/include/proto/: account.proto  money_service.grpc.pb.h  money_service.pb.h  money_service.proto  request.pb.h  request.proto  transactions_history.proto
quickchat-moneys/src/: account.pb.cc  gen_id_service_impl.cpp  logger.cpp  main.cpp  money_service.grpc.pb.cc  money_service.pb.cc  request.pb.cc
quickchat-users/: CMakeLists.txt  compile_commands.json  config.json
quickchat-users/build2/: config.json
quickchat-users/include/: common.h  config_json.hpp  gen_id_service_impl.h  session_mgr.hpp  session_mgr_impl.hpp  user.h  user_controller.hpp  user_dao.h  user_dao_impl.h  user_info.h  user_repository.hpp  user_repository_impl.hpp  user_service_impl.hpp  util.h
quickchat-users/include/proto/: user_service.grpc.pb.h  user_service.pb.h  user_service.proto
quickchat-users/src/: main.cpp  session_mgr_impl.cpp  user_controller.cpp  user_dao_impl.cpp  user_info.cpp
(+51 files in other folders)
